pint-pandas Changelog
=====================

0.3 (unreleased)
----------------

- Fixed a bug which caused the creation of PintArray (and even more so all binary mathematical operations)
  to convert input arrays to lists of Quantity, thereby causing a huge slowdown. #80
- Fixed a bug where listlike operands in binary operations were not correctly converted to Quantity arrays. #86
- Fixed pickling of `PintArray` instances. #71
- Fixed a bug where units of a quantity where ignored when creating a PintArray. #104
- Quantity arrays may be used to initialise PintArrays without specifying the dtype. #104
- Fixed a bug where `.astype("string[pyarrow]")` would not create pyarrow-backed arrays. #101

0.2 (2021-03-23)
----------------

- Support for pandas 1.2, which allows DataFrames with PintArrays to be plotted #53 #60 #61
- Fixed bug which prevented creating a PintArray with offset units like temperature. #48
- Fixed bug which caused Series.min() to throw an exception. #47
- pint-pandas now uses pint's application registry by default #67
- Improved testing
- Minimum Pint version is 0.17
- Minimum Pandas vesrion is 1.2

0.1 (2020-07-01)
----------------

- first public release.